# quest

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
launch/: generic_controller.launch  logitech_gamepad.launch  rotors_xacro_display.launch  sony_dualshock3.launch  spacenav.launch  xbox_controller.launch
nodes/: metric_reactive_mob  metric_reactive_mob.py  run_seq_client  unco_no_rviz
resource/disc/: RDP.ui
resource/plan/: Minsnap.ui
scripts/: accel_command.ipynb  ati_thrust_mapping.ipynb  att_ctrl.ipynb  esc_hi.ipynb  esc_low.ipynb  esc_med.ipynb  esc_parse.ipynb  imu_att_filter.ipynb  scalar_chirp.ipynb  sim2d.m  sim2dfunc.m  sim3d.py  sim3d_bound.py  test_py_bindings.py  thrust_mapping.ipynb
scripts/sysid/: takeoffprep_land.bash  vel_box.bash  vel_box_noarm.bash  vel_box_sim.bash  vel_updown.bash
src/: teleop.cpp
src/quest/: __init__.py  settings.py  utils.py
src/quest/diffeo/: __init__.py  angular_rates_accel.py  body_frame.py  controls.py
src/quest/disc/: line_simpl.py  spline.py
src/quest/minsnap/: __init__.py  constraint.py  cost.py  joint_optimize.py  quadrotor_polytraj.py  selector.py
src/quest/plan/: __init__.py  ros_helpers.py  unco.py
