<?xml version="1.0"?>
<package format="2">
  <name>quest</name>
  <version>0.0.1</version>
  <description>analysis tools and ROS-based ground tools for quest</description>
  <maintainer email="genemerewether@gmail.com">Gene Merewether</maintainer>
  <license>BSD</license>

  <buildtool_depend version_gte="0.5.78">catkin</buildtool_depend>

  <depend>mav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf2_geometry_msgs</depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>spacenav_node</exec_depend>

</package>
